# ProductivityFlow

./: .dockerignore  ACCOUNT_CREATION_FIX_SUMMARY.md  ADVANCED_FEATURES_IMPLEMENTATION.md  ANTHROPIC_CLIENT_FIX.md  AUTHENTICATION_DEBUG_SUMMARY.md  AUTHENTICATION_FIXES_SUMMARY.md  BACKEND_CONNECTION_FIX_SUMMARY.md  BACKEND_DEPLOYMENT_FIXES.md  BACKEND_ISSUES_SUMMARY.md  BACKEND_STATUS_SUMMARY.md  BUG_FIXES_SUMMARY.md  BUILT_APPLICATIONS_SUMMARY.md  CLOUD_BACKEND_TESTING_SUMMARY.md  COMPREHENSIVE_BACKEND_FIXES_SUMMARY.md  COMPREHENSIVE_BUG_TEST_REPORT.md  COMPREHENSIVE_FEATURE_TEST_SUMMARY.md  COMPREHENSIVE_FIXES_FINAL.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  COMPREHENSIVE_ROBUST_FIXES_SUMMARY.md  COMPREHENSIVE_TRACKING_IMPLEMENTATION_SUMMARY.md  CRITICAL_BUG_FIXES_SUMMARY.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE_FINAL.md  DEPLOYMENT_STATUS.md  DESKTOP_TRACKER_IMPLEMENTATION.md  DMG_BUILD_SUMMARY.md  DMG_CLEANUP_AND_BUG_CHECK.md  Dockerfile  Dockerfile 2  EMPLOYEE_AUTHENTICATION_VERIFICATION.md  EMPLOYEE_TRACKER_FIXES.md  FINAL_AUTHENTICATION_STATUS.md  FINAL_BUILD_REPORT.md  FINAL_BUILD_STATUS.md  FINAL_BUILD_SUMMARY.md  FINAL_COMPREHENSIVE_FIXES_REPORT.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_OPERATIONAL_STATUS.md  FINAL_STATUS_AND_SOLUTION.md  (+111 more)
employee-tracker-tauri/src-tauri/: Cargo.toml  tauri.conf.json
employee-tracker-tauri/src-tauri/src/: main.rs  system_monitor.rs
employee-tracker-tauri/src-tauri/target 2/: .rustc_info.json
employee-tracker-tauri/src-tauri/target 2/release/: employee-tracker-tauri.d
employee-tracker-tauri/src-tauri/target 2/release/.fingerprint/adler2-c0edacecb1132c9c/: lib-adler2
employee-tracker-tauri/src-tauri/target 2/release/.fingerprint/alloc-stdlib-f4273bf9cf794304/: lib-alloc_stdlib
(+435 files in other folders)
